--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Clima App</title>
+    <title>AppTiempo</title>
 </head>
 <body>
     <h1>Consulta del Clima</h1>
@@ -26,3 +26,4 @@
     {% endif %}
 </body>
 </html>
+
